2012-01-10  Albert Chu <chu11@llnl.gov>

	* common/toolcommon/tool-config-file-common.c: Fix several config
	file option parsing bugs.
	
2012-01-10  Albert Chu <chu11@llnl.gov>

	* doc/freeipmi-faq.texi: Add conman configuration FAQ example.
	Add terminology, ganglia, nagios info.

2012-01-09  Albert Chu <chu11@llnl.gov>

	* doc/freeipmi-faq.texi: Add powerman configuration FAQ example.
	
2012-01-09  Albert Chu <chu11@llnl.gov>

	* Merge 8250:8352 ipmioemdellgetsysteminfo.

	* ipmi-oem/ipmi-oem-dell.c: Add Dell get-system-info
	'slot-number', 'system-revision', 'embedded-video-status',
	'idrac-info', 'idrac-ipv4-url', 'idrac-gui-webserver-control',
	'cmc-ipv4-url', 'cmc-ipv6-info', 'cmc-ipv6-url' k eys.  Support
	12G mac addresses.  Support better error messages.
	
2012-01-09  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/: Add re-arm sensor events functions.

	* bmc-device/: Support --rearm-sensor.

	* README, man/freeipmi.7.pre.in: Update description of bmc-device.

2012-01-09  Albert Chu <chu11@llnl.gov>

	* man/ipmi-oem.8.pre.in: Add SDR caching information to specific
	OEM commands.
	
2012-01-08  Albert Chu <chu11@llnl.gov>

	* Update/fix various documentation and comments.
	
2012-01-08  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/cmds/ipmi-sensor-cmds.c,
	libfreeipmi/include/freeipmi/templates/ipmi-sensor-cmds-templates.h:
	Re-arm Sensor Events fields are optional not required.
	
2012-01-08  Albert Chu <chu11@llnl.gov>

	* libipmiconsole/: Don't deactivate the SOL payload when it
	appears the SOL session has been stolen.
	
2012-01-07  Albert Chu <chu11@llnl.gov>

	Merge serialkeepalive branch

	* libipmiconsole/: Add SERIAL_KEEPALIVE_EMPTY flag support.

	* libipmiconsole/ipmiconsole_processing.c
	(_serial_keepalive_timeout): Fix keepalive calculation to avoid
	spinning.

	* ipmiconsole/: Add --serial-keepalive-empty support.

	* configure.ac: Update versioning for libipmiconsole.
	
2012-01-07  Albert Chu <chu11@llnl.gov>
