@@ -1,3 +1,15 @@
+2012-01-11  Albert Chu <chu11@llnl.gov>
+
+	Merge sunbladex6250sensor branch
+
+	* libfreeipmi/sensor-read/ipmi-sensor-read.c
+	(_sensor_reading_corner_case_checks): Handle corner case in Sun
+	Blade x6250.
+
+	* libfreeipmi/sensor-read/ipmi-sensor-read.c
+	(_sensor_reading_corner_case_checks): Slightly alter error code
+	return interpretations.
+	
 2012-01-10  Albert Chu <chu11@llnl.gov>
 
 	* common/toolcommon/tool-config-file-common.c: Fix several config
